--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-markdown": "^10.1.0",
     "react-router": "^7.9.5",
     "remark-gfm": "^4.0.1",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
